--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "5.4.2",
-    "lodash": "4.1.0",
-    "core-js": "2.4.1",
-    "zone.js": "0.8.12",
-    "@angular/core": "4.3.3",
-    "@angular/http": "4.3.3",
-    "@angular/forms": "4.3.3",
     "@angular/common": "4.3.3",
-    "@angular/router": "4.3.3",
     "@angular/compiler": "4.3.3",
+    "@angular/core": "4.3.3",
+    "@angular/forms": "4.3.3",
+    "@angular/http": "4.3.3",
     "@angular/platform-browser": "4.3.3",
-    "@angular/platform-browser-dynamic": "4.3.3"
+    "@angular/platform-browser-dynamic": "4.3.3",
+    "@angular/router": "4.3.3",
+    "@fortawesome/angular-fontawesome": "^0.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "core-js": "2.4.1",
+    "lodash": "4.1.0",
+    "rxjs": "5.4.2",
+    "zone.js": "0.8.12"
   },
   "scripts": {
     "ng": "ng",
